deploy/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: kasodds
  namespace: kasodds
  labels:
    app.kubernetes.io/name: kasodds
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: kasodds
  ports:
    - name: http
      port: 3000
      targetPort: http
